feat: server tools, app intro

--- a/EE-dyplom.bib
+++ b/EE-dyplom.bib
@@ -32,7 +32,13 @@
     month   = {1},
     note    = {\href{https://royalsocietypublishing.org/doi/pdf/10.1098/rstl.1865.0008}{<https://royalsocietypublishing.org/doi/pdf/10.1098/rstl.1865.0008>}, dostęp uzyskano 2020-12-03},
 }
-
+@Article{gradleDepsTree,
+    author  = {Ishan Khanna},
+    title   = {Mastering The Gradle Dependency Tree},
+    journal = {Medium},
+    year = {2023},
+    note    = {\href{https://blog.droidchef.dev/mastering-the-gradle-dependency-tree/}{<https://blog.droidchef.dev/mastering-the-gradle-dependency-tree/>}, dostęp uzyskano 2025-01-02},
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % InProceedings - artykuły z konferencji
 % Wymagane pola: author or editor, title, publisher, year.
@@ -67,7 +73,36 @@
     year      = {2009},
     ISBN      = {978-0750685672},
 }
+    
+@book{gradleForAndroid,
+    author = {Kevin Pelgrims},
+    title = {Gradle for Android},
+    date = {2015},
+}
 
+@book{mavenDefinitiveGuide,
+    author = {Sonatype Company},
+    title = {Maven: The Definitive Guide},
+    date = {2006-2009},
+}
+
+@book{effectiveKotlin,
+    author = {Marcin Moskała},
+    title = {Effective Kotlin},
+    date = {2019},
+}
+
+@book{structuredConcurrency,
+    author = {Pierre-Olivier Laurence and Amanda Hinchman-Dominguez and G. Blake Meike and Mike Dunn},
+    title = {Programming Android with Kotlin: Achieving Structured Concurrency with Coroutines},
+    date = {2021},
+}   
+
+@book{postgresSharding,
+    author = {Hans-Jürgen Schönig},
+    title = {PostgreSQL Replication - Second Edition},
+    date = {2015},
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Inbook - część książki, na przykład rozdział i/lub zakres stron.
 % Wymagane pola: author lub editor, title, chapter i/lub pages, publisher, year.
