--- a/EE-dyplom.tex
+++ b/EE-dyplom.tex
@@ -28,13 +28,13 @@
 % Configuration - to be personalized
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \instytut{Instytut Badawczy Zjednoczonych Przedsiębiorstw Elektronowych}
-\kierunek{Mechaneurystyka}
-\specjalnosc{Rzeczowidztwo}
-\title{Telechroniczna Optymalizacja Historii~Powszechnej~Hyperputerem}
+\kierunek{Informatyka stosowana}
+\specjalnosc{Inżynieria oprogramowania}
+\title{Aplikacja mobilna do organizacji korepetycji}
 \engtitle{Telechronic Optimization of~Universal~History Using~Hyperputer}
-\album{210912}
-\author{inż. Ijon Tichy}
-\promotor{prof. dr hab. inż. Astral Sternu Tarantoga}
+\album{319052}
+\author{Sebastian Kaluzinski}
+\promotor{prof. dr hab. Fill in}
 \date{2077}
 \longdate{2077-07-27}
 
@@ -81,13 +81,13 @@ This is abstract. This one is a little too short as it should occupy the whole p
     % Additional pages - comment out if not needed
     
     % Wykaz symboli i skrótów - patrz opis w tekście przykładowym
-    \acronymslist
-    % Spis rysunków
-    \listoffigures
-    % Spis tabel
-    \listoftables
-    % Załączniki (plik appendices.tex)
-    \easyappendices
+%    \acronymslist
+%    % Spis rysunków
+%    \listoffigures
+%    % Spis tabel
+%    \listoftables
+%    % Załączniki (plik appendices.tex)
+%    \easyappendices
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
