--- a/tekst/main.tex
+++ b/tekst/main.tex
@@ -1,22 +1,14 @@
 % Rozdziały zaczynają się od "chapter"
-\chapter{Wstęp}
-% Praca podzielona na mniejsze pliki włączane za pomocą input
-% Zajrzyj do pliku tekst/wstep.tex
-\input{tekst/wstep}
+\chapter*{Wstęp}
+\addcontentsline{toc}{chapter}{Wstęp}
+\input{tekst/wstep/wprowadzenie.tex}
+\input{tekst/wstep/cel_pracy.tex}
+\input{tekst/wstep/plan_pracy.tex}
 
-% Można też wszystko pisać w jednym pliku ale będzie on duży
-\chapter{Nienudny tytuł dla teorii}
-Można też pisać wszystko w~jednym pliku, tak jak przyzwyczajają do tego gorsze programy, ale wtedy główny plik będzie bardzo duży i~trudniejszy w zarządzaniu.
+\chapter{Serwer backendowy}
+\input{tekst/serwer/wstep.tex}
+\input{tekst/serwer/narzedzia.tex}
 
-I~to by było na tyle. Kolejny rozdział jest testem ciągłości numeracji rysunków, wzorów i~innych elementów graficznych. Za nim jest jeszcze rozdział~\ref{ch:podsumowanie} z podsumowaniem, bibliografia, wykazy, spisy i załączniki.
-
-% fragment nieużywany albo jeszcze niedodany można zakomentować
-%\input{tekst/teoria}
-%\input{tekst/donapisania}
-
-\chapter{Niebanalny tytuł kolejnego rozdziału}
-\input{tekst/praktyka}
-
-\chapter{Podsumowanie}
-\label{ch:podsumowanie}
-\input{tekst/podsumowanie}
+\chapter{Aplikacja mobilna}
+\input{tekst/aplikacja/wstep.tex}
+\input{tekst/aplikacja/narzedzia.tex}
