--- a/EE-dyplom.bib
+++ b/EE-dyplom.bib
@@ -39,6 +39,15 @@
     year = {2023},
     note    = {\href{https://blog.droidchef.dev/mastering-the-gradle-dependency-tree/}{<https://blog.droidchef.dev/mastering-the-gradle-dependency-tree/>}, dostęp uzyskano 2025-01-02},
 }
+
+@Article{springBootThreadPool,
+    author  = {Egor Ponomarev},
+    title   = {https://medium.com/@egorponomarev/virtual-threads-in-spring-boot-with-java-19-ea98e1725058},
+    journal = {Medium},
+    year = {2023},
+    note    = {\href{https://medium.com/@egorponomarev/virtual-threads-in-spring-boot-with-java-19-ea98e1725058}{<https://medium.com/@egorponomarev/virtual-threads-in-spring-boot-with-java-19-ea98e1725058/>}, dostęp uzyskano 2025-01-02},
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % InProceedings - artykuły z konferencji
 % Wymagane pola: author or editor, title, publisher, year.
@@ -96,12 +105,30 @@
     author = {Pierre-Olivier Laurence and Amanda Hinchman-Dominguez and G. Blake Meike and Mike Dunn},
     title = {Programming Android with Kotlin: Achieving Structured Concurrency with Coroutines},
     date = {2021},
-}   
+}
+
+@book{legacyDebt,
+    author = {Neil Ernst and Rick Kazman and Julien Delange},
+    title = {Technical Debt in Practice - How to Find It and Fix It},
+    date = {2021},
+}
+
+@book{techDebtAccerelate,
+    author = { Nicole Forsgren and PhD Jez Humble and Gene Kim },
+    title = {Accelerate: The Science of Lean Software and DevOps: Building and Scaling High Performing Technology Organizations},
+    date = {2018},
+}
 
 @book{postgresSharding,
     author = {Hans-Jürgen Schönig},
     title = {PostgreSQL Replication - Second Edition},
     date = {2015},
+}
+
+@book{composeRecomposition,
+    author = {Thomas Künneth},
+    title = {Android UI Development with Jetpack Compose: Bring declarative and native UIs to life quickly and easily on Android using Jetpack Compose},
+    date = {2022},
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Inbook - część książki, na przykład rozdział i/lub zakres stron.
@@ -178,6 +205,7 @@
     note            = {AN4230},
 }
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % techreport - raport techniczny
 % Wymagane pola: author, title, institution, year.
@@ -211,3 +239,44 @@
     howpublished    = {\href{https://github.com/SP5LMA/EE-Dyplom}{<https://github.com/SP5LMA/EE-Dyplom>}},
 }
 
+@misc{kotlinWikipedia,
+    author       = {Wikipedia contributors},
+    title        = {Kotlin (programming language)},
+    howpublished = {\url{https://en.wikipedia.org/wiki/Kotlin_(programming_language)}},
+    note         = {Accessed: 2025-01-06}
+}
+@misc{godObjectWikipedia,
+    author       = {Wikipedia contributors},
+    title        = {God object},
+    howpublished = {\url{https://en.wikipedia.org/wiki/God_object}},
+    note         = {Accessed: 2025-01-06}
+}
+
+@manual{composeTree,
+    title = {title},
+    author = {Google},
+    note = {https://developer.android.com/develop/ui/compose/phases},
+}
+
+@manual{koinMultiplatform,
+    title = {Kotlin Multiplatform Dependency Injection},
+    author = {Arnaud Giuliani and open source contributors},
+    note = {\url{https://insert-koin.io/docs/reference/koin-mp/kmp/}},
+}
+
+@manual{ktorMultiplatform,
+    title = {Creating a cross-platform mobile application},
+    author = {JetBrains},
+    note = {\url{https://ktor.io/docs/client-create-multiplatform-application.html}},
+}
+
+@manual{herokuPrice,
+    title = {Stack Update Policy},
+    author = {Salesforce},
+    note = {\url{https://devcenter.heroku.com/articles/stack-update-policy}},
+}
+
+@manual{ngrok,
+    title = {What is ngrok?},
+    note = {\url{https://ngrok.com/docs/what-is-ngrok/}},
+}
