--- a/EE-dyplom.tex
+++ b/EE-dyplom.tex
@@ -27,16 +27,16 @@
 % Konfiguracja - do personalizacji
 % Configuration - to be personalized
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\instytut{Instytut Badawczy Zjednoczonych Przedsiębiorstw Elektronowych}
+\instytut{The Institute of the Theory of Electrical Engineering, Measurement and Information Systems}
 \kierunek{Informatyka stosowana}
 \specjalnosc{Inżynieria oprogramowania}
-\title{Aplikacja mobilna do organizacji korepetycji}
-\engtitle{Telechronic Optimization of~Universal~History Using~Hyperputer}
+\title{Rozwiązanie informatyczne do organizacji korepetycji}
+\engtitle{Computer solution for organizing tutoring}
 \album{319052}
 \author{Sebastian Kaluzinski}
-\promotor{prof. dr hab. Fill in}
-\date{2077}
-\longdate{2077-07-27}
+\promotor{}
+\date{2025}
+\longdate{2025-01-25}
 
 %\grantlicense{TRUE} % [TRUE|FALSE]
 
@@ -50,7 +50,7 @@ To jest streszczenie. To jest trochę za krótkie, jako że powinno zająć cał
 \lipsum[1-4]
 } % koniec streszczenia
 
-\slowakluczowe{A, B, C}
+\slowakluczowe{Android, Spring, Kotlin}
 
 \thesisabstract{
 This is abstract. This one is a little too short as it should occupy the whole page.
@@ -58,7 +58,7 @@ This is abstract. This one is a little too short as it should occupy the whole p
 \lipsum[1-4]
 } % end of abstract
 
-\thesiskeywords{X, Y, Z}
+\thesiskeywords{Android, Spring, Kotlin}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Tu zaczyna się dokument
