--- a/tekst/main.tex
+++ b/tekst/main.tex
@@ -5,9 +5,17 @@
 \input{tekst/wstep/cel_pracy.tex}
 \input{tekst/wstep/plan_pracy.tex}
 
+\chapter{Przygotowanie do zaplanowania projektu}
+\input{tekst/przygotowania/wstep.tex}
+\input{tekst/przygotowania/przypadki-uzycia.tex}
+\input{tekst/przygotowania/hosting.tex}
+
+
 \chapter{Serwer backendowy}
 \input{tekst/serwer/wstep.tex}
 \input{tekst/serwer/narzedzia.tex}
+\input{tekst/serwer/architektura.tex}
+\input{tekst/serwer/problemy.tex}
 
 \chapter{Aplikacja mobilna}
 \input{tekst/aplikacja/wstep.tex}
